<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_party"
            android:checkableBehavior="single">
        <item android:id="@+id/invitationFragment"
            android:icon="@drawable/ic_baseline_email_24px"
            android:title="@string/invitation" />
        <item android:id="@+id/instructionsFragment"
            android:icon="@drawable/ic_baseline_menu_24px"
            android:title="@string/instructions" />
        <item android:id="@+id/charactersFragment"
            android:icon="@drawable/ic_baseline_people_24px"
            android:title="@string/characters" />
        <item android:id="@+id/myCharacterFragment"
                android:icon="@drawable/ic_baseline_account_circle_24px"
                android:title="@string/my_character" />
    </group>
    <group  android:id="@+id/menu_main"
            android:checkableBehavior="single">
        <item
                android:id="@+id/mysteriesFragment"
                android:icon="@drawable/ic_baseline_list_24px"
                android:title="@string/mysteries"
                android:checked="true" />
        <item
                android:id="@+id/howToPlayFragment"
                android:icon="@drawable/ic_baseline_info_24px"
                android:title="@string/how_to_play" />
        <item
                android:id="@+id/awardFragment"
                android:icon="@drawable/ic_baseline_bookmark_24px"
                android:title="@string/awards" />
        <item
                android:id="@+id/helpFragment"
                android:icon="@drawable/ic_baseline_help_24px"
                android:title="@string/help" />
    </group>
</menu>