<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_play"
            android:checked="true"
        android:icon="@drawable/ic_baseline_home_24px"
        android:title="@string/play"/>
    <item
        android:id="@+id/nav_mysteries"
        android:icon="@drawable/ic_baseline_list_24px"
        android:title="@string/mysteries" />
    <item
        android:id="@+id/nav_how_to_play"
        android:icon="@drawable/ic_baseline_info_24px"
        android:title="@string/how_to_play" />
    <item
        android:id="@+id/nav_awards"
        android:icon="@drawable/ic_baseline_bookmark_24px"
        android:title="@string/awards" />
    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_baseline_help_24px"
        android:title="@string/help" />
</group>
</menu>